--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=A7QmGSm0AUPaxjG7SSVeLbd5oqKqTqQf
 
 DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=psoftwaredb
+DB_USERNAME=root
+DB_PASSWORD=root
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
