--- a/composer.json
+++ b/composer.json
@@ -47,5 +47,8 @@
     },
     "config": {
         "preferred-install": "dist"
+    },
+    "require": {
+        "laravelcollective/html": "5.1.*"
     }
 }
